# albert

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
aemon/: algebra.py  canon.py  config.py  symmetry.py  tensor.py
aemon/optim/: cost.py  flops.py  parenth.py
aemon/qc/: _pdaggerq.py  ghf.py  rhf.py
albert/: __init__.py  algebra.py  base.py  canon.py  config.py  expression.py  hashing.py  index.py  misc.py  printing.py  scalar.py  symmetry.py  tensor.py  types.pyi
albert/code/: __init__.py  _ebcc.py  base.py  einsum.py
albert/codegen/: base.py  einsum.py
albert/opt/: __init__.py  _gristmill.py  cse.py  parenth.py  tools.py
albert/optim/: _gristmill.py  cost.py  cse.py  parenth.py  sort.py
albert/qc/: __init__.py  _gristmill.py  _pdaggerq.py  _wick.py  decomp.py  ghf.py  index.py  rhf.py  spin.py  tensor.py  uhf.py
einfun/: __init__.py  algebra.py  base.py  bintree.py  canon.py  config.py  misc.py  symmetry.py  tensor.py  tree.py
einfun/codegen/: base.py
einfun/optim/: __init__.py  cost.py  cse.py  parenth.py
einfun/qc/: _pdaggerq.py  ghf.py  rhf.py
examples/: introduction.ipynb  rccsd.py
old/albert/: __init__.py  base.py  canon.py  serialise.py  symmetry.py  tensor.py
old/albert/codegen/: __init__.py
old/albert/qc/: __init__.py  _wick.py  ghf.py  index.py  rhf.py  spin.py  uhf.py
tests/: conftest.py  test_algebra.py  test_code_einsum.py  test_gristmill.py  test_index.py  test_opt.py  test_pdaggerq.py  test_rccsd.py  test_spin.py  test_tensor.py  test_uccsd.py
